# aecoder-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
aec-sys/: Cargo.toml  README.md  build.rs
aec-sys/src/: lib.rs
libaec-sys/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs
libaec-sys/src/: lib.rs
