[package]
name = "libaec-sys"
version = "0.1.0"
authors = ["Noritada Kobayashi <noritada.kobayashi@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/noritada/aec-rs"
homepage = "https://github.com/noritada/aec-rs"
description = "Low-level bindings to Adaptive Entropy Coding library (libaec)."
categories = ["compression", "external-ffi-bindings"]
keywords = ["libaec", "aec", "ccsds"]

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.51"
